<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splashColor"
    tools:context=".login.SignUpActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_marginTop="80dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/putih"
            android:textStyle="bold"
            android:textSize="40sp"
            android:padding="16dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <EditText
                android:layout_marginBottom="16dp"
                android:layout_marginTop="150dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                android:textSize="20sp"
                android:inputType="text"
                android:textColor="@color/putih"
                android:textColorHint="@color/putih"
                android:id="@+id/signup_nama"
                />

            <EditText
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nim"
                android:textSize="20sp"
                android:textColor="@color/putih"
                android:textColorHint="@color/putih"
                android:inputType="number"
                android:id="@+id/signup_nim"
                />

            <EditText
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Kelas"
                android:textSize="20sp"
                android:textColor="@color/putih"
                android:textColorHint="@color/putih"
                android:inputType="text"
                android:id="@+id/signup_kelas"
                />

            <EditText
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:textSize="20sp"
                android:textColor="@color/putih"
                android:textColorHint="@color/putih"
                android:inputType="textEmailAddress"
                android:id="@+id/signup_email"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="password"
                android:textSize="20sp"
                android:textColor="@color/putih"
                android:textColorHint="@color/darkgray"
                android:inputType="textPassword"
                android:id="@+id/signup_password"
                />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Show Password"/>

            <Button
                android:layout_marginTop="40dp"
                android:id="@+id/btnregistration_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_putih"
                android:text="SIGN UP"
                android:textColor="@color/splashColor" />

            <TextView
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/putih"
                android:text="Sudah punya akun?"/>

            <TextView
                android:textColor="@color/putih"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:id="@+id/txtLogin"
                android:clickable="true"
                android:text="LOGIN"/>

        </LinearLayout>


    </FrameLayout>



</ScrollView>