<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.haekal.scheduling.menu_utama.MenuActivity"
    android:background="@drawable/menu"
    android:scrollbars="none">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="170dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="50dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="selamat"
                                    android:textColor="@color/putih"
                                    android:textSize="13sp" />

                                <TextView
                                    android:id="@+id/hari"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:text="Hari"
                                    android:textColor="@color/putih"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="367dp"
                android:layout_height="130dp"
                android:layout_marginBottom="30dp"
                android:gravity="right"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/home_nama"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_vertical"
                    android:layout_marginTop="1dp"
                    android:text="in nama"
                    android:textColor="@color/putih"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="vertical">

                    <AnalogClock
                        android:layout_width="155dp"
                        android:layout_height="89dp"
                        android:layout_gravity="left" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtJam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:text="Jam Kuliah ke-"
                            android:textColor="@color/putih"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/JamKe"
                            android:layout_width="45dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:text="1"
                            android:textColor="@color/putih"
                            android:textSize="13sp" />


                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="405dp"
                android:layout_height="499dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/menu1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="MissingConstraints">

                    <androidx.cardview.widget.CardView

                        android:id="@+id/bankcardId"
                        android:layout_width="160dp"
                        android:layout_height="190dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"

                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/btn_tugas"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/btn_tugas"
                                android:contentDescription="TODO"
                                android:padding="10dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="Kegiatan Harian"
                                android:textStyle="bold"
                                tools:ignore="HardcodedText" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:background="@color/lightgray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="Tulis kegiatan harianmu untuk mengingkatkan jadwal keseharianmu"
                                android:textColor="@android:color/darker_gray"
                                tools:ignore="HardcodedText" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView

                        android:layout_width="160dp"
                        android:layout_height="190dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/btn_jadwal"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/btn_jadwal"
                                android:padding="10dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/jadwal_schedule"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:background="@color/lightgray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="Tulis jadwal harianmu disini"
                                android:textColor="@android:color/darker_gray" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menu2"
                    android:layout_width="match_parent"
                    android:layout_height="223dp"
                    android:layout_marginTop="10dp"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="MissingConstraints">

                    <androidx.cardview.widget.CardView
                        android:layout_width="160dp"
                        android:layout_height="190dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/btn_profil"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/btn_profil"
                                android:padding="10dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/profile_kamu"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:background="@color/lightgray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/txt_profil"
                                android:textColor="@android:color/darker_gray" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</ScrollView>
